[workspace]
resolver = "2"

members = [
    "contracts/hub/*",
    "contracts/liquidity/*",
    "packages/*",
    "tests-integration",
]

[profile.release]
opt-level = "z"
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true
strip = true

[workspace.dependencies]
euclid = { path = "./packages/euclid" }
euclid-ibc = { path = "./packages/euclid_ibc" }

cosmwasm-std = "2.1.3"
cosmwasm-schema = "2.1.3"
cw-storage-plus = "2.0.0"
cw-utils = "2.0.0"
cw2 = "2.0.0"
cw20 = "2.0.0"
cw20-base = "2.0.0"
schemars = "0.8.21"
serde = { version = "1.0.209", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.63" }
itertools = "0.13.0"

mock = { path = "./packages/mock" }
cw-multi-test = "2.1.1"
