[workspace]
resolver = "2"

members = [
    "contracts/hub/*",
    "contracts/liquidity/*",
    "contracts/common/*",
    "packages/*",
    "tests-integration",
]

[profile.release]
opt-level = "z"
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true
strip = true

[workspace.dependencies]
euclid = { path = "./packages/euclid" }
euclid-ibc = { path = "./packages/euclid_ibc" }
euclid-utils = { path = "./packages/euclid_utils" }

cosmwasm-std = "1.5.3"
cosmwasm-schema = "1.5.0"
cw-storage-plus = "1.1.0"
cw-utils = "1.0"
cw2 = "1.1.1"
cw20 = "1.1"
cw20-base = "=1.1.2"
schemars = "0.8.15"
serde = { version = "1.0.208", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.49" }
itertools = "0.10"

mock = { path = "./packages/mock" }
cw-multi-test = { version = "1.2.0", features = [
    "cosmwasm_1_2",
    "cosmwasm_1_1",
] }
