[package]
name = "tests-integration"
version = "1.0.0"
edition = "2021"
rust-version = "1.75.0"
publish = false

[features]
modules = []

[dev-dependencies]
router = { path = "../contracts/hub/router"}
vcoin = { path = "../contracts/hub/vcoin"}
vlp = { path = "../contracts/hub/vlp"}




#Other Crates
euclid = { path = "../packages/euclid"}





#Cosmwasm Crates
cosmwasm-std = { version = "1.5.3" }
cw-storage-plus = "1.1.0"
itertools = "0.10"
cosmwasm-schema = "1.1"
cw-utils = "1.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
cw-multi-test = "=1.2.0"

anyhow = "1.0.79"

# cw-cii = { git = "https://github.com/public-awesome/ics721.git" }
# cw-pause-once = { git = "https://github.com/public-awesome/ics721.git" }
# cw721-rate-limited-proxy = { git = "https://github.com/0xekez/cw721-proxy.git" }


# [[test]]
# name = "cw721"


[dependencies]
rstest = "0.19.0"
