[package]
name = "tests-integration"
version = "1.0.0"
edition = "2021"
rust-version = "1.75.0"
publish = false

[features]
modules = []

[dev-dependencies]
router = { path = "../contracts/hub/router" }
virtual_balance = { path = "../contracts/hub/virtual_balance" }
vlp = { path = "../contracts/hub/vlp" }
escrow = { path = "../contracts/liquidity/escrow" }
factory = { path = "../contracts/liquidity/factory" }


#Other Crates
euclid = { path = "../packages/euclid" }


#Cosmwasm Crates
cosmwasm-std = { version = "1.5.3" }
cw-storage-plus = "1.1.0"
itertools = "0.10"
cosmwasm-schema = "1.1"
cw-utils = "1.0"


anyhow = "1.0.79"

# cw-cii = { git = "https://github.com/public-awesome/ics721.git" }
# cw-pause-once = { git = "https://github.com/public-awesome/ics721.git" }
# cw721-rate-limited-proxy = { git = "https://github.com/0xekez/cw721-proxy.git" }


# [[test]]
# name = "cw721"
rstest = "0.19.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
cw-multi-test = { workspace = true }
mock = { workspace = true }
