[package]
name = "cw20"
version = "0.2.0"
authors = ["Anshudhar Kumar Singh <anshudhar2001@gmail.com>", "Joe Momem"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/optimizer:0.15.0
"""

[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std = { workspace = true, features = [
  "cosmwasm_1_2",
  # Enable this if you only deploy to chains that have CosmWasm 1.4 or higher
  # "cosmwasm_1_4",
  "ibc3",
] }
cw-storage-plus = { workspace = true }
cw2 = { workspace = true }
cw20-base = { workspace = true }
cw20 = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true, default-features = false, features = ["derive"] }
thiserror = { workspace = true }
euclid = { workspace = true }

[dev-dependencies]
cw-multi-test = { workspace = true }
